@@ -1,6 +1,7 @@
 2007-04-05  Junichi Uekawa  <dancer@debian.org>
 
 	* qemubuilder.c: initial import to cowdancer repository.
+	rename functions to 'qemubuilder_'.
 
 2007-03-08  Junichi Uekawa  <dancer@debian.org>
 
